# Matrix

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: matrix.hpp  processor.hpp
src/: driver.cpp
tests/: gtests.cpp
tests/end2end/: gen_tests.py  run_e2e.sh
tests/unit/: unit_tests.cpp
